split driver for selenium and playwright